fixed input zoom on mobile changed colors for visibility

--- a/src/components/Checkbox/checkbox.module.scss
+++ b/src/components/Checkbox/checkbox.module.scss
@@ -13,11 +13,11 @@
 }
 
 .checkbox {
-  --active: #52057b;
+  --active: #7fdc2c;
   --active-inner: #fff;
   --focus: 1px #fff;
   --border: #bbc1e1;
-  --border-hover: #52057b;
+  --border-hover: #2e7b05;
   --background: #fff;
   --disabled: #f6f8ff;
   --disabled-inner: #e1e6f9;
