--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -16,6 +16,7 @@
   border: none;
   outline: none;
   background: none;
+  font-size: 16px;
 }
 
 .form label {
@@ -35,7 +36,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  border-bottom: 3px solid $primary-color;
+  border-bottom: 3px solid $secondary-color;
   left: 0;
   bottom: -3px;
   transform: translateX(-101%);
@@ -53,7 +54,7 @@
 .form input:valid + .labelName .contentName {
   transform: translateY(-150%);
   font-size: 14px;
-  color: $primary-color;
+  color: $secondary-color;
 }
 
 .form input:focus + .labelName::after,
